--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Your website description here" />
@@ -11,59 +10,89 @@
     <!-- Link to your CSS file -->
     <script src="script.js" defer></script>
     <!-- Link to your JavaScript file (defer ensures it's executed after the HTML is parsed) -->
-</head>
+  </head>
 
-<body>
+  <body>
     <main class="container">
-        <div class="card-container">
-            <div class="card-front">
-                <div class="card-images">
-                    <img class="chip-image" src="images/chip-image.png" alt="" />
-                    <img class="visa-logo" src="images/visa-logo.png" alt="" />
-                </div>
-                <div class="card-number-box">XXXX XXXX XXXX XXXX</div>
-                <div class="card-holder-name-box">
-                    <div class="box">
-                        <span>card holder</span>
-                        <div class="card-holder-name">Full name</div>
-                    </div>
-                    <div class="box">
-                        <span>expires</span>
-                        <div class="expiration-date">
-                            <span class="expire-month">mm</span>
-                            <span class="expire-year">yy</span>
-                        </div>
-                    </div>
-                </div>
+      <div class="card-container">
+        <div class="card-front">
+          <div class="card-images">
+            <img class="chip-image" src="images/chip-image.png" alt="" />
+            <img
+              id="money-point-logo"
+              class="money-point-logo"
+              src="images/money-point-logo.png"
+              alt=""
+            />
+          </div>
+          <div class="card-number-box">XXXX XXXX XXXX XXXX</div>
+          <div class="card-holder-name-box">
+            <div class="box">
+              <span>card holder</span>
+              <div class="card-holder-name">Full name</div>
             </div>
-            <div class="card-back">
-                <div class="strip"></div>
-                <div class="box">
-                    <span>cvv</span>
-                    <div class="cvv-box"></div>
-                    <img class="visa-logo-card-back" src="images/visa-logo.png" alt="" />
-                </div>
+            <div class="box">
+              <span>expires</span>
+              <div class="expiration-date">
+                <span class="expire-month">mm</span>
+                <span class="expire-year">yy</span>
+              </div>
             </div>
+          </div>
+          <div class="visa-logo-div">
+            <img src="images/visa-logo.png" alt="" />
+          </div>
         </div>
-        <div class="success-message" id="success-message">
-            Form submitted successfully!
+        <div class="card-back">
+          <div class="strip"></div>
+          <div class="box">
+            <span>cvv</span>
+            <div class="cvv-box"></div>
+            <img
+              class="visa-logo-card-back"
+              src="images/visa-logo.png"
+              alt=""
+            />
+          </div>
         </div>
+      </div>
+      <div class="success-message" id="success-message">
+        Form submitted successfully!
+      </div>
 
-        <form action="" id="payment-form">
-            <div class="input-box">
-                <div class="card-logo" id="card-logo"></div>
-                <span>Card number</span>
-                <input type="text" id="card-number" maxlength="19" class="card-number-input" name="card-number" required />
-            </div>
-            <div class="card-logo" id="card-logo"></div>
-            <div class="input-box">
-                <span>Card holder name</span>
-                <input type="text" id="card-holder-input" class="card-holder-input" name="card-holder-input" required />
-            </div>
-            <div class="flexbox">
-                <div class="input-box">
-                    <span>Expiration month</span>
-                    <select name="year-input" id="month-input" class="month-input" required>
+      <form action="" id="payment-form">
+        <div class="card-logo" id="card-logo"></div>
+        <div class="input-box">
+          <span>Card number</span>
+          <input
+            type="text"
+            id="card-number"
+            maxlength="19"
+            class="card-number-input"
+            name="card-number"
+            required
+          />
+        </div>
+        <div class="card-logo" id="card-logo"></div>
+        <div class="input-box">
+          <span>Card holder name</span>
+          <input
+            type="text"
+            id="card-holder-input"
+            class="card-holder-input"
+            name="card-holder-input"
+            required
+          />
+        </div>
+        <div class="flexbox">
+          <div class="input-box">
+            <span>Expiration month</span>
+            <select
+              name="year-input"
+              id="month-input"
+              class="month-input"
+              required
+            >
               <option value="" selected disabled>Month</option>
               <option value="01">01</option>
               <option value="02">02</option>
@@ -78,10 +107,15 @@
               <option value="11">11</option>
               <option value="12">12</option>
             </select>
-                </div>
-                <div class="input-box">
-                    <span>Expiration year</span>
-                    <select name="year-input" id="year-input" class="year-input" required>
+          </div>
+          <div class="input-box">
+            <span>Expiration year</span>
+            <select
+              name="year-input"
+              id="year-input"
+              class="year-input"
+              required
+            >
               <option value="" selected disabled>Year</option>
               <option value="2023">2023</option>
               <option value="2024">2024</option>
@@ -93,20 +127,26 @@
               <option value="2030">2030</option>
               <option value="2031">2031</option>
             </select>
-                </div>
-                <div class="input-box">
-                    <span>Cvv</span>
-                    <input type="text" pattern="\d{3,4}" maxlength="4" id="cvv-input" class="cvv-input" required />
-                </div>
-            </div>
+          </div>
+          <div class="input-box">
+            <span>Cvv</span>
+            <input
+              type="text"
+              pattern="\d{3,4}"
+              maxlength="4"
+              id="cvv-input"
+              class="cvv-input"
+              required
+            />
+          </div>
+        </div>
 
-            <input type="submit" value="Submit" class="submit-btn" />
-        </form>
+        <input type="submit" value="Submit" class="submit-btn" />
+      </form>
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+      <p id="footer-text">&copy; 2023 cariebi. All rights reserved.</p>
     </footer>
-</body>
-
+  </body>
 </html>
